finish front-end api

--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -10,3 +10,8 @@ packages:
     emit_interface: true
     emit_exact_table_names: false
     emit_empty_slices: true
+overrides:
+  - db_type: "pg_catalog.numeric"
+    go_type: "float64"
+  - db_type: "pg_catalog.interval"
+    go_type: "string"
